seaqt/QtWidgets/gen_qwizard.h

typedef struct QAbstractButton QAbstractButton;
typedef struct QMetaObject QMetaObject;
typedef struct QPixmap QPixmap;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
typedef struct QWizard QWizard;
typedef struct QWizardPage QWizardPage;
typedef struct VirtualQWizard VirtualQWizard;
QMetaObject* QWizard_metaObject(const QWizard* self);
void* QWizard_metacast(QWizard* self, const char* param1);
int QWizard_metacall(QWizard* self, int param1, int param2, void** param3);
struct miqt_string QWizard_tr(const char* s);
int QWizard_addPage(QWizard* self, QWizardPage* page);
void QWizard_setPage(QWizard* self, int id, QWizardPage* page);
void QWizard_removePage(QWizard* self, int id);
QWizardPage* QWizard_page(const QWizard* self, int id);
bool QWizard_hasVisitedPage(const QWizard* self, int id);
struct miqt_array /* of int */  QWizard_visitedIds(const QWizard* self);
struct miqt_array /* of int */  QWizard_pageIds(const QWizard* self);
void QWizard_setStartId(QWizard* self, int id);
int QWizard_startId(const QWizard* self);
QWizardPage* QWizard_currentPage(const QWizard* self);
int QWizard_currentId(const QWizard* self);
bool QWizard_validateCurrentPage(QWizard* self);
int QWizard_nextId(const QWizard* self);
void QWizard_setField(QWizard* self, struct miqt_string name, QVariant* value);
QVariant* QWizard_field(const QWizard* self, struct miqt_string name);
void QWizard_setWizardStyle(QWizard* self, int style);
int QWizard_wizardStyle(const QWizard* self);
void QWizard_setOption(QWizard* self, int option);
bool QWizard_testOption(const QWizard* self, int option);
void QWizard_setOptions(QWizard* self, int options);
int QWizard_options(const QWizard* self);
void QWizard_setButtonText(QWizard* self, int which, struct miqt_string text);
struct miqt_string QWizard_buttonText(const QWizard* self, int which);
void QWizard_setButtonLayout(QWizard* self, struct miqt_array /* of int */  layout);
void QWizard_setButton(QWizard* self, int which, QAbstractButton* button);
QAbstractButton* QWizard_button(const QWizard* self, int which);
void QWizard_setTitleFormat(QWizard* self, int format);
int QWizard_titleFormat(const QWizard* self);
void QWizard_setSubTitleFormat(QWizard* self, int format);
int QWizard_subTitleFormat(const QWizard* self);
void QWizard_setPixmap(QWizard* self, int which, QPixmap* pixmap);
QPixmap* QWizard_pixmap(const QWizard* self, int which);
void QWizard_setSideWidget(QWizard* self, QWidget* widget);
QWidget* QWizard_sideWidget(const QWizard* self);
void QWizard_setDefaultProperty(QWizard* self, const char* className, const char* property, const char* changedSignal);
void QWizard_setVisible(QWizard* self, bool visible);
QSize* QWizard_sizeHint(const QWizard* self);
void QWizard_currentIdChanged(QWizard* self, int id);
void QWizard_connect_currentIdChanged(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QWizard_helpRequested(QWizard* self);
void QWizard_connect_helpRequested(QWizard* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QWizard_customButtonClicked(QWizard* self, int which);
void QWizard_connect_customButtonClicked(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QWizard_pageAdded(QWizard* self, int id);
void QWizard_connect_pageAdded(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QWizard_pageRemoved(QWizard* self, int id);
void QWizard_connect_pageRemoved(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QWizard_back(QWizard* self);
void QWizard_next(QWizard* self);
void QWizard_setCurrentId(QWizard* self, int id);
void QWizard_restart(QWizard* self);
struct miqt_string QWizard_tr2(const char* s, const char* c);
struct miqt_string QWizard_tr3(const char* s, const char* c, int n);
void QWizard_setOption2(QWizard* self, int option, bool on);
QMetaObject* QWizard_virtualbase_metaObject(const VirtualQWizard* self);
void* QWizard_virtualbase_metacast(VirtualQWizard* self, const char* param1);
void QWizardPage_connect_completeChanged(QWizardPage* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));