seaqt/QtWidgets/gen_qwizard.nim


proc fcQWizard_metaObject(self: pointer, ): pointer {.importc: "QWizard_metaObject".}
proc fcQWizard_metacast(self: pointer, param1: cstring): pointer {.importc: "QWizard_metacast".}
proc fcQWizard_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWizard_metacall".}
proc fcQWizard_tr(s: cstring): struct_miqt_string {.importc: "QWizard_tr".}
proc fcQWizard_addPage(self: pointer, page: pointer): cint {.importc: "QWizard_addPage".}
proc fcQWizard_setPage(self: pointer, id: cint, page: pointer): void {.importc: "QWizard_setPage".}
proc fcQWizard_removePage(self: pointer, id: cint): void {.importc: "QWizard_removePage".}
proc fcQWizard_page(self: pointer, id: cint): pointer {.importc: "QWizard_page".}
proc fcQWizard_hasVisitedPage(self: pointer, id: cint): bool {.importc: "QWizard_hasVisitedPage".}
proc fcQWizard_visitedIds(self: pointer, ): struct_miqt_array {.importc: "QWizard_visitedIds".}
proc fcQWizard_pageIds(self: pointer, ): struct_miqt_array {.importc: "QWizard_pageIds".}
proc fcQWizard_setStartId(self: pointer, id: cint): void {.importc: "QWizard_setStartId".}
proc fcQWizard_startId(self: pointer, ): cint {.importc: "QWizard_startId".}
proc fcQWizard_currentPage(self: pointer, ): pointer {.importc: "QWizard_currentPage".}
proc fcQWizard_currentId(self: pointer, ): cint {.importc: "QWizard_currentId".}
proc fcQWizard_validateCurrentPage(self: pointer, ): bool {.importc: "QWizard_validateCurrentPage".}
proc fcQWizard_nextId(self: pointer, ): cint {.importc: "QWizard_nextId".}
proc fcQWizard_setField(self: pointer, name: struct_miqt_string, value: pointer): void {.importc: "QWizard_setField".}
proc fcQWizard_field(self: pointer, name: struct_miqt_string): pointer {.importc: "QWizard_field".}
proc fcQWizard_setWizardStyle(self: pointer, style: cint): void {.importc: "QWizard_setWizardStyle".}
proc fcQWizard_wizardStyle(self: pointer, ): cint {.importc: "QWizard_wizardStyle".}
proc fcQWizard_setOption(self: pointer, option: cint): void {.importc: "QWizard_setOption".}
proc fcQWizard_testOption(self: pointer, option: cint): bool {.importc: "QWizard_testOption".}
proc fcQWizard_setOptions(self: pointer, options: cint): void {.importc: "QWizard_setOptions".}
proc fcQWizard_options(self: pointer, ): cint {.importc: "QWizard_options".}
proc fcQWizard_setButtonText(self: pointer, which: cint, text: struct_miqt_string): void {.importc: "QWizard_setButtonText".}
proc fcQWizard_buttonText(self: pointer, which: cint): struct_miqt_string {.importc: "QWizard_buttonText".}
proc fcQWizard_setButtonLayout(self: pointer, layout: struct_miqt_array): void {.importc: "QWizard_setButtonLayout".}
proc fcQWizard_setButton(self: pointer, which: cint, button: pointer): void {.importc: "QWizard_setButton".}
proc fcQWizard_button(self: pointer, which: cint): pointer {.importc: "QWizard_button".}
proc fcQWizard_setTitleFormat(self: pointer, format: cint): void {.importc: "QWizard_setTitleFormat".}
proc fcQWizard_titleFormat(self: pointer, ): cint {.importc: "QWizard_titleFormat".}
proc fcQWizard_setSubTitleFormat(self: pointer, format: cint): void {.importc: "QWizard_setSubTitleFormat".}
proc fcQWizard_subTitleFormat(self: pointer, ): cint {.importc: "QWizard_subTitleFormat".}
proc fcQWizard_setPixmap(self: pointer, which: cint, pixmap: pointer): void {.importc: "QWizard_setPixmap".}
proc fcQWizard_pixmap(self: pointer, which: cint): pointer {.importc: "QWizard_pixmap".}
proc fcQWizard_setSideWidget(self: pointer, widget: pointer): void {.importc: "QWizard_setSideWidget".}
proc fcQWizard_sideWidget(self: pointer, ): pointer {.importc: "QWizard_sideWidget".}
proc fcQWizard_setDefaultProperty(self: pointer, className: cstring, property: cstring, changedSignal: cstring): void {.importc: "QWizard_setDefaultProperty".}
proc fcQWizard_setVisible(self: pointer, visible: bool): void {.importc: "QWizard_setVisible".}
proc fcQWizard_sizeHint(self: pointer, ): pointer {.importc: "QWizard_sizeHint".}
proc fcQWizard_currentIdChanged(self: pointer, id: cint): void {.importc: "QWizard_currentIdChanged".}
proc fcQWizard_connect_currentIdChanged(self: pointer, slot: int, callback: proc (slot: int, id: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QWizard_connect_currentIdChanged".}
proc fcQWizard_helpRequested(self: pointer, ): void {.importc: "QWizard_helpRequested".}
proc fcQWizard_connect_helpRequested(self: pointer, slot: int, callback: proc (slot: int) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QWizard_connect_helpRequested".}
proc fcQWizard_customButtonClicked(self: pointer, which: cint): void {.importc: "QWizard_customButtonClicked".}
proc fcQWizard_connect_customButtonClicked(self: pointer, slot: int, callback: proc (slot: int, which: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QWizard_connect_customButtonClicked".}
proc fcQWizard_pageAdded(self: pointer, id: cint): void {.importc: "QWizard_pageAdded".}
proc fcQWizard_connect_pageAdded(self: pointer, slot: int, callback: proc (slot: int, id: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QWizard_connect_pageAdded".}
proc fcQWizard_pageRemoved(self: pointer, id: cint): void {.importc: "QWizard_pageRemoved".}
proc fcQWizard_connect_pageRemoved(self: pointer, slot: int, callback: proc (slot: int, id: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QWizard_connect_pageRemoved".}
proc fcQWizard_back(self: pointer, ): void {.importc: "QWizard_back".}
proc fcQWizard_next(self: pointer, ): void {.importc: "QWizard_next".}
proc fcQWizard_setCurrentId(self: pointer, id: cint): void {.importc: "QWizard_setCurrentId".}
proc fcQWizard_restart(self: pointer, ): void {.importc: "QWizard_restart".}
proc fcQWizard_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWizard_tr2".}
proc fcQWizard_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWizard_tr3".}
proc fcQWizard_setOption2(self: pointer, option: cint, on: bool): void {.importc: "QWizard_setOption2".}
type cQWizardVTable {.pure.} = object
  destructor*: proc(vtbl: ptr cQWizardVTable, self: ptr cQWizard) {.cdecl, raises:[], gcsafe.}
  metaObject*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  metacast*: proc(vtbl, self: pointer, param1: cstring): pointer {.cdecl, raises: [], gcsafe.}
  metacall*: proc(vtbl, self: pointer, param1: cint, param2: cint, param3: pointer): cint {.cdecl, raises: [], gcsafe.}
  validateCurrentPage*: proc(vtbl, self: pointer, ): bool {.cdecl, raises: [], gcsafe.}
  nextId*: proc(vtbl, self: pointer, ): cint {.cdecl, raises: [], gcsafe.}
  setVisible*: proc(vtbl, self: pointer, visible: bool): void {.cdecl, raises: [], gcsafe.}
  sizeHint*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  event*: proc(vtbl, self: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  resizeEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  paintEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  done*: proc(vtbl, self: pointer, resultVal: cint): void {.cdecl, raises: [], gcsafe.}
  initializePage*: proc(vtbl, self: pointer, id: cint): void {.cdecl, raises: [], gcsafe.}
  cleanupPage*: proc(vtbl, self: pointer, id: cint): void {.cdecl, raises: [], gcsafe.}
  minimumSizeHint*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  open*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  exec*: proc(vtbl, self: pointer, ): cint {.cdecl, raises: [], gcsafe.}
  accept*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  reject*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  keyPressEvent*: proc(vtbl, self: pointer, param1: pointer): void {.cdecl, raises: [], gcsafe.}
  closeEvent*: proc(vtbl, self: pointer, param1: pointer): void {.cdecl, raises: [], gcsafe.}
  showEvent*: proc(vtbl, self: pointer, param1: pointer): void {.cdecl, raises: [], gcsafe.}
  contextMenuEvent*: proc(vtbl, self: pointer, param1: pointer): void {.cdecl, raises: [], gcsafe.}
  eventFilter*: proc(vtbl, self: pointer, param1: pointer, param2: pointer): bool {.cdecl, raises: [], gcsafe.}
  devType*: proc(vtbl, self: pointer, ): cint {.cdecl, raises: [], gcsafe.}
  heightForWidth*: proc(vtbl, self: pointer, param1: cint): cint {.cdecl, raises: [], gcsafe.}
  hasHeightForWidth*: proc(vtbl, self: pointer, ): bool {.cdecl, raises: [], gcsafe.}
  paintEngine*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  mousePressEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  mouseReleaseEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  mouseDoubleClickEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  mouseMoveEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  wheelEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  keyReleaseEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  focusInEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  focusOutEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  enterEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  leaveEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  moveEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  tabletEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  actionEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  dragEnterEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  dragMoveEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  dragLeaveEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  dropEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  hideEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  nativeEvent*: proc(vtbl, self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool {.cdecl, raises: [], gcsafe.}
  changeEvent*: proc(vtbl, self: pointer, param1: pointer): void {.cdecl, raises: [], gcsafe.}
  metric*: proc(vtbl, self: pointer, param1: cint): cint {.cdecl, raises: [], gcsafe.}
  initPainter*: proc(vtbl, self: pointer, painter: pointer): void {.cdecl, raises: [], gcsafe.}
  redirected*: proc(vtbl, self: pointer, offset: pointer): pointer {.cdecl, raises: [], gcsafe.}
  sharedPainter*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  inputMethodEvent*: proc(vtbl, self: pointer, param1: pointer): void {.cdecl, raises: [], gcsafe.}
  inputMethodQuery*: proc(vtbl, self: pointer, param1: cint): pointer {.cdecl, raises: [], gcsafe.}
  focusNextPrevChild*: proc(vtbl, self: pointer, next: bool): bool {.cdecl, raises: [], gcsafe.}
  timerEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  childEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  customEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  connectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
  disconnectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
proc fcQWizard_virtualbase_metaObject(self: pointer, ): pointer {.importc: "QWizard_virtualbase_metaObject".}
proc fcQWizard_virtualbase_metacast(self: pointer, param1: cstring): pointer {.importc: "QWizard_virtualbase_metacast".}
